cut down and hover

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ As we entered the testing stage, we did so with a few expectations and even a fe
 </p>
 
 <p>
-In terms of the chatbot itself, we were unsure whether our strict citations rules would perform well and presumed that the bot would potentially cite outside of the sources. We also worried that using our bot would feel too stiff or too formal, even after trying to make it engaging and friendly. In addition, although this will be discussed more in detail in the Building the Gem section, we had no idea whether anyone would actually enjoy the optional myth-debunking game, or if it would feel like an extra step that users would find inadequate. And of course, we were hoping to see at least a small shift in students’ beliefs about what actually works when studying. 
+In terms of the chatbot itself, we were unsure whether our strict citations rules would perform well and presumed that the bot would potentially cite outside of the sources. We also worried that using our bot would feel too stiff or too formal, even after trying to make it engaging and friendly. In addition, although this will be discussed more in detail in the Building the Gem section, we had no idea whether anyone would actually enjoy the optional myth-debunking game. And of course, we were hoping to see at least a small shift in students’ beliefs about what actually works when studying. 
 </p>
 
 <p>
@@ -136,7 +136,7 @@ Overall, this project is especially relevant to Wellesley because the transition
 
 <p>
 There are many ethical issues related to AI use in general, such as the vast amounts of energy and resources it consumes, the potential for algorithmic bias 
-<a href="#ref-designJustice" class="citation-link" id="cite-designJustice">[15]</a>, and the potential for false information and hallucinations. Our participants were not hesitant to express their concerns about generative AI usage, which were mainly about AI being unethical in general. When specifics were mentioned, it was in reference to resource consumption and environmental impacts.
+<a href="#ref-designJustice" class="citation-link" id="cite-designJustice">[15]</a>, and the potential for false information and hallucinations. 
 
 
 When participants were asked <em>"What would make you trust an AI tool to give reliable study advice?" </em>  one responded,
@@ -150,15 +150,15 @@ This participant was not alone in their beliefs on the matter. Yet, due to the n
 </p>
 
 <p>
-Further concerns arise from the use of genAI within this particular scope. Notably, interacting with an AI chatbot lessens the potential impact Wellesley’s community can have. If Study Buddy exists as a resource that students can interact with on their own,  students may not be as inclined to go to their academic success coach’s (ASC) motivation stations, PLTC workshops, or otherwise access support from those whose roles it is to support them academically. Interacting with Study Buddy has the potential to cause an overreliance on AI tools, and could potentially lead students from veering away from professor and TA office hours and towards AI tools that not only isolate them from their community, but again partake in all of the aforementioned ethical quandaries.
+Further concerns arise from the use of genAI within this particular scope. Notably, interacting with an AI chatbot lessens the potential impact Wellesley’s community can have. If Study Buddy exists as a resource that students can interact with on their own,  students may not be as inclined to go to their academic success coach’s (ASC) motivation stations, PLTC workshops, or otherwise access support from those whose roles it is to support them academically. 
 </p>
 <p>
 Throughout the process, we have been especially cognizant of our positionality in regards to the Wellesley first year community. Though as Wellesley students ourselves we have a lot in common with the first year students at this institution, we, as upperclassmen, are ultimately <strong><em> not </strong></em> a part of their internal community. To grapple with this, we have been keeping in mind the principles of 
-data feminism <a href="#ref-dataFeminism" class="citation-link" id="cite-dataFeminism">[1]</a>, most notably, embracing pluralism, and how we as researchers should not be inputting our own biases into our artifact, but instead how can use the research process as a method of participatory design to uplift multiple perspectives of Wellesley first years, rather than prescribing our own beliefs.
+data feminism <a href="#ref-dataFeminism" class="citation-link" id="cite-dataFeminism">[1]</a>, most notably, embracing pluralism, and how we as researchers should not be inputting our own biases into our artifact.
 </p>
 
 <p>
-Though GenAI is most definetly not accepted with open arms by Wellesley first years and ethical concerns, our Study Buddy chatbot does still nonetheless have potential for positive impacts on this community. In our user study, we were able to see patterns of increased belief in effective study strategies and decreased belief in ineffective ones: <strong>Study Buddy accomplished its goal.</strong> One participant even said,
+In our user study, we were able to see patterns of increased belief in effective study strategies and decreased belief in ineffective ones: <strong>Study Buddy accomplished its goal.</strong> One participant even said,
 </p>
 
 <div class="blueQuote">
@@ -189,7 +189,7 @@ Additionally, as researchers with a degree of separation from the community we a
 
         <ul>
           <li><span class="liIntro" >Transparency</span><br>
-          The primary principle that guided our gem development was transparency. This involved being open and honest about the limitations of the gem, such as its limited scope and its potential for hallucinations. Not only were we transparent about the gem itself, but the work behind it, as our participants received thorough documentation on how we created the gem. This domain of transparency and making labor visible was informed by the principles of data feminism.
+          The primary principle that guided our gem development was transparency. This involved being open and honest about the limitations of the gem, such as its limited scope and its potential for hallucinations. Not only were we transparent about the gem itself, but the work behind it, as our participants received thorough documentation on how we created the gem, informed by the principles of data feminism.
           <a class="citation-link" href="#ref-dataFeminism">[1]</a>
 
           <div class="citation-block">
@@ -205,13 +205,13 @@ recognized and valued."
             learning journeys, academic performance, and overall wellbeing, 
 
             we also recognized the negative consequences that inaccurate information could have as well.
-            Thus, we prioritized information accuracy in our gem's design, ensuring our Gem strictly adhered to citing only peer-reviewed research from psychology, cognitive science, and learning science journals we selected ourselves.
+            Thus, we prioritized information accuracy in our gem's design, ensuring our Gem strictly adhered to citing only peer-reviewed research we selected ourselves.
           
           </li>
           <li><span class="liIntro" >Interactivity</span><br>
-          We set out to ensure our gem was taking full advantage of the affordances of AI, one of those being <em>interactivity</em>. We didn’t want engagement with our gem to feel similar to engagement with a static website, or even a google search that just simply provides paragraphs and paragraphs of information. Thus, one strategy we implemented was creating a more novel mode of interaction through a text-based game. Users were made aware of such a possibility, and if they requested, could participate in a game of true or false, where they could test their knowledge of whether study strategies were actually effective or not. 
+          We set out to ensure our gem was taking full advantage of the affordances of AI, one of those being <em>interactivity</em>. We didn’t want engagement with our gem to feel similar to engagement with a static website, or even a google search that just simply provides paragraphs and paragraphs of information. Thus, one strategy we implemented was creating a more novel mode of interaction through a text-based game. Users were made aware of such a possibility, and if they requested, could participate in a game of true or false study strategies.
 
-          </li>This methodology not only  made the gem more engaging, but also made it easier to learn the content.
+          </li>
  The text-based game incorporates components of the effective study strategies we researched by having users participate in the beneficial habits of active recall <a href="#ref-13" class="citation-link" id="cite-13">[13]</a>, which has shown particular effectiveness within edutainment <a href="#ref-14" class="citation-link" id="cite-14">[14]</a>. This is as opposed to simply reading and re-reading the information, which has been proven to be ineffective for long-term learning when used in isolation <a href="#ref-10" class="citation-link" id="cite-10">[10, 11, 12]</a>.
 </li>
 
@@ -334,15 +334,19 @@ In terms of the bot itself, based on their feedback and looking at their screens
 </ol>
 </div>
 
-<div class="row my-4">
-  <div class="col-md-6 text-center">
-    <img src="sources.png" class="img-fluid rounded shadow-sm" style="max-width: 40%;"/>
-    <p class="mt-2 text-muted">Bot citing internet sources</p>
+<div class="row my-4 align-items-center">
+  <div class="col-md-6 d-flex justify-content-center">
+    <div class="img-card">
+      <img src="sources.png" class="img-fluid" alt="Bot citing internet sources"/>
+      <p class="img-caption">Bot citing internet sources</p>
+    </div>
   </div>
 
-  <div class="col-md-6 text-center">
-    <img src="game.png" class="img-fluid rounded shadow-sm"  style="max-width: 90%;"/>
-    <p class="mt-2 text-muted">True/False Myth Game</p>
+  <div class="col-md-6 d-flex justify-content-center">
+    <div class="img-card">
+      <img src="game.png" class="img-fluid" alt="True/False Myth Game"/>
+      <p class="img-caption">True/False Myth Game</p>
+    </div>
   </div>
 </div>
 <p>
@@ -354,8 +358,8 @@ In terms of the actual testing materials being sent out, we received feedback re
          <h3> User Testing with Wellesley First Years </h3>
 <p>
 Our final round involved ten first-years. In addition to our Professors Eni and Walsh spreading awareness, we requested the Dean of First Year Students at Wellesley to send out our interest form to all first-year students. Because she agreed, we assumed that every first-year on campus was made aware of the study and urged to participate. As an incentive, we also made sure to include that the participants who complete the study fully would be entered into a raffle to win one of two $15 Amazon gift cards. 
-We had over 30 users fill out our interest form, and to each, we privately sent out all of the study materials they required, which can be viewed <a href="">here</a>. These materials included an informed consent form, thorough instructions, a pre-survey, testing scenarios about the all-nighter myth and multitasking habits, a screenshot tutorial, a folder to upload screenshots, the Gem, a post survey, and a debriefing document. After sending out multiple email reminders, only 10 users fully completed the study. 
-As part of the study materials we provided participants, you can view them <a href="participantInfo.pdf" target="_blank" rel="noopener noreferrer">here</a>.
+We had over 30 users fill out our interest form, and to each, we privately sent out all of the study materials they required. These materials included an informed consent form, thorough instructions, a pre-survey, testing scenarios about the all-nighter myth and multitasking habits, a screenshot tutorial, a folder to upload screenshots, the Gem, a post survey, and a debriefing document. After sending out multiple email reminders, only 10 users fully completed the study. 
+As part of the study materials we provided participants, you can view them <strong><a href="participantInfo.pdf" target="_blank" rel="noopener noreferrer">here</a></strong>.
 </p>
 <p>
 From this group, we gathered both numbers and written comments. The quantitative part included ratings of engagement, difficulty, clarity of citations, how well the bot stayed on topic, and their overall experience. We also measured how their beliefs about certain study myths changed from before or after using the bot. 
@@ -385,7 +389,7 @@ Our results for first-year testing came from three main sources: the pre- and po
 <h4>Quantitative Results</h4>
 
 <p>
-To track belief change, we asked participants to rate five statements about study habits on a 1–10 scale before and after using the chatbot.
+To track belief change, we asked participants to rate five statements about study habits on a 1–10 scale before and after using the chatbot, in the following order.
 </p>
 
 <ul>
@@ -454,7 +458,7 @@ In general, we noticed that the bot was more consistent at debunking ineffective
 <h5>Where the Bot Performed Best</h5>
 
 <p>
-A few areas consistently stood out as strengths. Students agreed that the bot cited credible sources, stayed on topic, and was easy to use. Responses for all of these items were clustered heavily around “Agree” and “Strongly Agree,” which matched what we observed during testing. The bot rarely drifted outside its intended scope, and participants appreciated that it felt focused rather than scattered.
+A few areas consistently stood out as strengths. Students agreed that the bot cited credible sources, stayed on topic, and was easy to use. Responses for all of these items were clustered heavily around “Agree” and “Strongly Agree,” which matched what we observed during testing.
 </p>
 
 <h5>Where the Bot Struggled</h5>
@@ -542,10 +546,10 @@ Finally, although our strict constraints succeeded in keeping the bot accurate a
       <div class="card-body clearfix">
         <h2>Discussion</h2>
 
-        <h3>Study Buddy's Overall Performance + comparison</h3>
+        <h3>Study Buddy's Overall Performance + Comparison</h3>
         <p>Overall, Study Buddy performed quite well at its intended goal of helping first years understand which study habits are most effective, such that they <span class="primaryText">(1) </span> are beneficial for short and long term information retention,<span class="primaryText"> (2)</span> help students <em>understand</em> content rather than just <em>memorize</em> it, and <span class="primaryText">(3) </span> positively impact not only students' grades, but their physical and mental health as well.</p>
 
-        <p>Our participants did walk away from our study with more accurate knowledge about which study strategies would be beneficial in these regards, which aligns with our initial expectations of the Gem's performance. Yet, one initially surprising aspect was that Study Buddy was better at debunking ineffective strategies than boosting belief in effective ones. To understand why the quantitative data showed this pattern, we looked into the qualitative data. When asked<em> "What would make you trust an AI tool to give reliable study advice?", </em>
+        <p>Our participants did walk away from our study with more accurate knowledge about which study strategies would be beneficial in these regards, which aligns with our initial expectations of the Gem's performance. Yet, one initially surprising aspect was that Study Buddy was better at debunking ineffective strategies than boosting belief in effective ones. To understand this, we looked into the qualitative data. When asked<em> "What would make you trust an AI tool to give reliable study advice?", </em>
           five of the eight respondents to this question expressed that personal testing of the study strategies would increase their trust, and thus their belief in the information:</p>
 
         <div class="blueQuote">
@@ -558,7 +562,7 @@ Finally, although our strict constraints succeeded in keeping the bot accurate a
   <br>
         <p>Only 3 participants said their trust would be increased if the chatbot pulled information from valid sources. While Study Buddy performed well at our intended goal of increasing awareness of effective study strategies among Wellesley first years, our experimental design did not allow for participants to actually implement the strategies and report back. We hypothesize that belief in the effectiveness of these Study Buddy recommended strategies would increase if participants were able to test them themselves</p>
 
-      <p>After receiving feedback that users would like Study Buddy to help them actually implement these effective study strategies, we recognize this as a route we could explore in the future. Yet, introducing this capability, while potentially increasing user satisfaction, this also increases the likelihood of hallucinations. To allow the Gem to provide more personalized advice, we would have to lessen the restrictions on the knowledge base, allowing for unvetted information and hallucinations to potentially fall through the cracks. A simpler fix would be to have Study Buddy recommend even more of Wellesley’s resources, which would allow it to maintain a strict knowledge base and promote involvement in Wellesley’s vibrant community. </p>
+      <p>After receiving feedback that users would like Study Buddy to help them actually implement these effective study strategies, we recognize this as a route we could explore in the future. To allow the Gem to provide more personalized advice, we would have to lessen the restrictions on the knowledge base, allowing for unvetted information and hallucinations to potentially fall through the cracks. A simpler fix would be to have Study Buddy recommend even more of Wellesley’s resources, which would allow it to maintain a strict knowledge base and promote involvement in Wellesley’s vibrant community. </p>
   
  <h3>What was missing in our testing process</h3>
 <p>One element missing from our testing process was <strong>needfinding </strong>. Looking back, it doesn't make sense to design for an audience without actually asking what the audience needs from our design. While we did reach out to the broader community about their current perceptions of effective and ineffective study strategies and their perceptions of AI, we only learned through testing the gem that it isn't exactly what our audience wants. <br><br>
